                    Changes made to Pyjamas since 0.4
                    ---------------------------------

 * implemented "isdigit" for strings

 * added support for unicode constants, the encoding is now explicitly
   set in the *.chache.html files to "utf-8". Strings should now be
   encoded in a safer manner.

 * implemented basic Exceptions in pyjslib and added them to the global
   namespace.

 * implemented try except statements with an expression. Raising and
   catching of class based Exceptions is now possible. String based
   Exceptions also work.

 * implemented the 'isinstance' builtin function, currently onnly
   works on normal class instances.

 * implemented the 'raise' statement. it only works with a single expression.

 * changed 'getattr' to accept a default and raise an AttributeError
   if the attribute cannot be found.

 * implemented 'setattr'

 * added none modal behaviour to DialogBox

 * fixed bug if mouse is moved too fast while dragging a dialog

 * added support for statements at the "global" level in pyjs.py, so
   that compiling "if __name__ == '__main__': " and other such global
   code statements will now work.

                    Changes made to Pyjamas since 0.3
                    ---------------------------------

Enhancements

 * Added library/splitpanel.py and library/vertsplitpanel.py, along with
  examples/splitpanel.  NOTE: splitpanels should be in ui.

 * Changed ui.TabBar.insertTab() to allow widgets to be passed as well as text.

 * Added examples/tabpanelwidget

 * Added gtk_converter to the "contrib" directory (thanks to Jeremy)

 * Added library/decoratorpanel.py which includes DecoratorPanel,
   DecoratedTabPanel and DecoratedTabBar.  NOTE: these classes should
   be in ui.

 * Added examples/slideshow

 * Added support for slicing with negative numbers.

 * Added examples/jsobject

 * Added support for a debugging mode, which can be turned on by include a "-d"