@@ -1,7 +1,22 @@
 [buildout]
-parts = scripts
+parts = pyjscompile pyjsbuild
 develop = .
 
-[scripts]
+[pyjscompile]
 recipe = zc.recipe.egg:script
 eggs = Pyjamas
+scripts = pyjscompile
+initialization = import pyjs
+  pyjs.path += ['${buildout:directory}/library']
+
+[pyjsbuild]
+recipe = zc.recipe.egg:script
+eggs = Pyjamas
+scripts = pyjsbuild
+initialization = import pyjs, sys
+  pyjs.path += ['${buildout:directory}/library',
+                '${buildout:directory}/library/builtins',
+                '${buildout:directory}/addons',
+               ]
+  sys.argv.extend(['-D', '${buildout:directory}'])
+
