@@ -1,2 +1,2 @@
-python ../../builder/build.py TestRect.py
-python ../../builder/build.py TestDict.py
+../../bin/pyjsbuild TestRect.py
+../../bin/pyjsbuild TestDict.py
