@@ -1,1 +1,1 @@
-python ../../builder/build.py KitchenSink.py
+../../bin/pyjsbuild KitchenSink.py
