@@ -1,1 +1,1 @@
-python ../../builder/build.py OnClickTest.py
+../../bin/pyjsbuild OnClickTest.py
